--- a/index.html
+++ b/index.html
@@ -58,89 +58,7 @@
                             0.0244141H157.03V5.60877H153.132Z" fill="hsl(0, 0%, 18%)" /></svg>
                     </div>
                     <div id="navbar-category">
-                        <div id="navbar-category-base-0" class="navbar-category-base">
-                            <div class="navbar-category-section">
-                                <div class="navbar-category-section-header">Lorem ipsum</div>
-                                <a href="#" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16">
-                                            <circle cx="8" cy="8" r="7.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="transparent" />
-                                            <path opacity="0.33" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H7V3H5V1ZM5
-                                        5V3H3V5H1V7H3V9H1V11H3V13H5V15H7V13H9V15H11V13H13V11H15V9H13V7H15V5H13V3H11V1H9V3H7V5H5ZM5 7H3V5H5V7ZM7
-                                        7V5H9V7H7ZM7 9V7H5V9H3V11H5V13H7V11H9V13H11V11H13V9H11V7H13V5H11V3H9V5H11V7H9V9H7ZM9 9H11V11H9V9ZM7
-                                        9V11H5V9H7Z" fill="currentColor" />
-                                        </svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Consectetur</div>
-                                        <div class="navbar-category-section-item-text-description">Adipiscing elit, sed do</div>
-                                    </div>
-                                </a>
-                                <a href="#" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16">
-                                            <circle cx="8" cy="8" r="7.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="transparent" />
-                                            <path opacity="0.33" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H7V3H5V1ZM5
-                                        5V3H3V5H1V7H3V9H1V11H3V13H5V15H7V13H9V15H11V13H13V11H15V9H13V7H15V5H13V3H11V1H9V3H7V5H5ZM5 7H3V5H5V7ZM7
-                                        7V5H9V7H7ZM7 9V7H5V9H3V11H5V13H7V11H9V13H11V11H13V9H11V7H13V5H11V3H9V5H11V7H9V9H7ZM9 9H11V11H9V9ZM7
-                                        9V11H5V9H7Z" fill="currentColor" />
-                                        </svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Eiusmod tempor</div>
-                                        <div class="navbar-category-section-item-text-description">Incididunt ut labore</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="navbar-category-section">
-                                <div class="navbar-category-section-header">Dolor sit amet</div>
-                                <a href="#" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16">
-                                            <circle cx="8" cy="8" r="7.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="transparent" />
-                                            <path opacity="0.33" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H7V3H5V1ZM5
-                                        5V3H3V5H1V7H3V9H1V11H3V13H5V15H7V13H9V15H11V13H13V11H15V9H13V7H15V5H13V3H11V1H9V3H7V5H5ZM5 7H3V5H5V7ZM7
-                                        7V5H9V7H7ZM7 9V7H5V9H3V11H5V13H7V11H9V13H11V11H13V9H11V7H13V5H11V3H9V5H11V7H9V9H7ZM9 9H11V11H9V9ZM7
-                                        9V11H5V9H7Z" fill="currentColor" />
-                                        </svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Et dolore magna</div>
-                                        <div class="navbar-category-section-item-text-description">Aliqua. Ut enim ad</div>
-                                    </div>
-                                </a>
-                                <a href="#" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16">
-                                            <circle cx="8" cy="8" r="7.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="transparent" />
-                                            <path opacity="0.33" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H7V3H5V1ZM5
-                                        5V3H3V5H1V7H3V9H1V11H3V13H5V15H7V13H9V15H11V13H13V11H15V9H13V7H15V5H13V3H11V1H9V3H7V5H5ZM5 7H3V5H5V7ZM7
-                                        7V5H9V7H7ZM7 9V7H5V9H3V11H5V13H7V11H9V13H11V11H13V9H11V7H13V5H11V3H9V5H11V7H9V9H7ZM9 9H11V11H9V9ZM7
-                                        9V11H5V9H7Z" fill="currentColor" />
-                                        </svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Minim veniam</div>
-                                        <div class="navbar-category-section-item-text-description">Quis nostrud exercitation</div>
-                                    </div>
-                                </a>
-                                <a href="#" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16">
-                                            <circle cx="8" cy="8" r="7.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="transparent" />
-                                            <path opacity="0.33" fill-rule="evenodd" clip-rule="evenodd" d="M5 1H7V3H5V1ZM5
-                                        5V3H3V5H1V7H3V9H1V11H3V13H5V15H7V13H9V15H11V13H13V11H15V9H13V7H15V5H13V3H11V1H9V3H7V5H5ZM5 7H3V5H5V7ZM7
-                                        7V5H9V7H7ZM7 9V7H5V9H3V11H5V13H7V11H9V13H11V11H13V9H11V7H13V5H11V3H9V5H11V7H9V9H7ZM9 9H11V11H9V9ZM7
-                                        9V11H5V9H7Z" fill="currentColor" />
-                                        </svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Ullamco laboris</div>
-                                        <div class="navbar-category-section-item-text-description">Nisi ut aliquip ex ea</div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                        <div id="navbar-category-base-0" class="navbar-category-base"></div>
                         <div id="navbar-category-base-1" class="navbar-category-base">
                             <div class="navbar-category-section">
                                 <div class="navbar-category-section-header">Lorem ipsum</div>
@@ -418,12 +336,13 @@
                 </ul>
             </div>
             <div id="navbar-inner-right">
-                <a href="#" class="btn btn-secondary">Contact</a>
-                <a href="#" class="btn btn-primary">Join Floofi</a>
+                <a href="/contact" class="btn btn-secondary">Contact</a>
+                <a href="/join" class="btn btn-primary">Join Floofi</a>
             </div>
         </header>
     </nav>
 
+    <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
     <script src="/assets/src/debug.js"></script>
 </body>
