--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
             </div>
         </header>
     </nav>
+    <div id="loader">
+        <img id="loader-img" src="/assets/img/loading.svg" alt="Loading...">
+    </div>
 
     <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
