--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Technology for creatures who matter – Floofi</title>
+    <title>Floofi</title>
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/src/ua-parser.min.js"></script>
@@ -202,12 +202,17 @@
             </div>
         </header>
     </nav>
-    <div id="loader">
-        <img id="loader-img" src="/assets/img/loading.svg" alt="Loading...">
-    </div>
+
+    <main id="app">
+        <div id="loader">
+            <img id="loader-img" src="/assets/img/loading.svg" alt="Loading...">
+        </div>
+        <article id="page"></article>
+    </main>
 
     <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
+    <script src="/assets/src/loader.js"></script>
     <script src="/assets/src/debug.js"></script>
 </body>
 </html>
