--- a/pages/404.html
+++ b/pages/404.html
@@ -1,4 +1,12 @@
 <script>
     document.title = "Error 404 – Floofi";
 </script>
-404!
+
+<div id="error-page">
+    <div id="error-page-inner">
+        <img src="/assets/img/error.svg" id="error-page-logo" alt="Logo">
+        <h1 id="error-page-title">404</h1>
+        <p id="error-page-description">We couldn't find the page you are looking for.</p>
+        <a class="btn btn-primary btn-flush btn-large" id="error-page-btn" href="/">Go back to the home page</a>
+    </div>
+</div>
