--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,7 +61,7 @@
                         <div id="navbar-category-base-0" class="navbar-category-base"></div>
                         <div id="navbar-category-base-1" class="navbar-category-base">
                             <div class="navbar-category-section">
-                                <div class="navbar-category-section-header">Inclusiveness</div>
+                                <div class="navbar-category-section-header">Services and Inclusiveness</div>
                                 <a href="/furry" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 5.172C10 3.782 8.423 2.679 6.5 3c-2.823.47-4.113 6.006-4 7 .08.703 1.725 1.722 3.656 1 1.261-.472 1.96-1.45 2.344-2.5"/><path d="M14.267 5.172c0-1.39 1.577-2.493 3.5-2.172 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"/><path d="M8 14v.5"/><path d="M16 14v.5"/><path d="M11.25 16.25h1.5L12 17l-.75-.75Z"/><path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444c0-1.061-.162-2.2-.493-3.309m-9.243-6.082A8.801 8.801 0 0 1 12 5c.78 0 1.5.108 2.161.306"/></svg>
@@ -71,27 +71,6 @@
                                         <div class="navbar-category-section-item-text-description">Statistics and actions</div>
                                     </div>
                                 </a>
-                                <a href="/queer" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"/><path d="M12 16.5A4.5 4.5 0 1 1 7.5 12 4.5 4.5 0 1 1 12 7.5a4.5 4.5 0 1 1 4.5 4.5 4.5 4.5 0 1 1-4.5 4.5"/><path d="M12 7.5V9"/><path d="M7.5 12H9"/><path d="M16.5 12H15"/><path d="M12 16.5V15"/><path d="m8 8 1.88 1.88"/><path d="M14.12 9.88 16 8"/><path d="m8 16 1.88-1.88"/><path d="M14.12 14.12 16 16"/></svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Queer</div>
-                                        <div class="navbar-category-section-item-text-description">Sexual and gender identity</div>
-                                    </div>
-                                </a>
-                                <a href="/neurodivergent" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12c-2-2.67-4-4-6-4a4 4 0 1 0 0 8c2 0 4-1.33 6-4Zm0 0c2 2.67 4 4 6 4a4 4 0 0 0 0-8c-2 0-4 1.33-6 4Z"/></svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Neurdivergent</div>
-                                        <div class="navbar-category-section-item-text-description">Autism, ADHD and related</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="navbar-category-section">
-                                <div class="navbar-category-section-header">Services</div>
                                 <a href="https://account.equestria.dev" target="_blank" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"/><circle cx="7.5" cy="7.5" r=".5" fill="currentColor"/></svg>
@@ -213,6 +192,7 @@
     <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
     <script src="/assets/src/loader.js"></script>
+    <script src="/assets/src/scroll.js"></script>
     <script src="/assets/src/debug.js"></script>
 </body>
 </html>
