--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,20 @@
 <script>
     document.title = "Technology for creatures who matter – Floofi";
 </script>
-Hello :)
+
+<div id="home-hero">
+    <div id="home-hero-inner">
+        <div id="home-hero-text">
+            <span id="home-hero-title">
+                Technology for<br>
+                creatures who<br>
+                matter
+            </span>
+        </div>
+        <div id="home-hero-image">
+            <img src="/assets/img/hero-1.webp" alt="" id="home-hero-image-1"><img src="/assets/img/hero-2.webp" alt="" id="home-hero-image-2"><img src="/assets/img/hero-3.webp" alt="" id="home-hero-image-3">
+        </div>
+    </div>
+</div>
+
+<p>Content</p>
