Final footer + hero decoration test

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,9 +10,15 @@
                 creatures who<br>
                 matter
             </span>
+            <span id="home-hero-background">
+                Technology for<br>
+                creatures who<br>
+                matter
+            </span>
         </div>
         <div id="home-hero-image">
             <img src="/assets/img/hero-1.webp" alt="" id="home-hero-image-1"><img src="/assets/img/hero-2.webp" alt="" id="home-hero-image-2"><img src="/assets/img/hero-3.webp" alt="" id="home-hero-image-3">
+            <img src="/assets/img/hero.svg" alt="" id="home-hero-image-background">
         </div>
     </div>
 </div>
