--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <nav id="mobile-navbar" class="no-border">
-        <header id="mobile-navbar-inner">
+    <header id="mobile-navbar" class="no-border">
+        <nav id="mobile-navbar-inner">
             <div id="mobile-navbar-inner-left">
                 <div id="mobile-navbar-logo">
                     <a href="/" id="mobile-navbar-logo-link">
@@ -32,10 +32,10 @@
                     </svg>
                 </a>
             </div>
-        </header>
-    </nav>
-    <nav id="navbar" class="no-border">
-        <header id="navbar-inner">
+        </nav>
+    </header>
+    <header id="navbar" class="no-border">
+        <nav id="navbar-inner">
             <div id="navbar-inner-left">
                 <div id="navbar-category-outer">
                     <div id="navbar-category-indicator">
@@ -67,7 +67,7 @@
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 5.172C10 3.782 8.423 2.679 6.5 3c-2.823.47-4.113 6.006-4 7 .08.703 1.725 1.722 3.656 1 1.261-.472 1.96-1.45 2.344-2.5"/><path d="M14.267 5.172c0-1.39 1.577-2.493 3.5-2.172 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"/><path d="M8 14v.5"/><path d="M16 14v.5"/><path d="M11.25 16.25h1.5L12 17l-.75-.75Z"/><path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444c0-1.061-.162-2.2-.493-3.309m-9.243-6.082A8.801 8.801 0 0 1 12 5c.78 0 1.5.108 2.161.306"/></svg>
                                     </div>
                                     <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Furry fandom</div>
+                                        <div class="navbar-category-section-item-text-title">Furry Fandom</div>
                                         <div class="navbar-category-section-item-text-description">Statistics and actions</div>
                                     </div>
                                 </a>
@@ -85,7 +85,7 @@
                                         <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.51324 3.62367L3.76375 8.34731C3.61845 8.7396 3.24433 8.99999 2.826 8.99999H0.75H0V7.49999H0.75H2.47799L4.56666 1.86057C4.88684 0.996097 6.10683 0.988493 6.43776 1.84891L10.5137 12.4463L12.2408 8.1286C12.3926 7.74894 12.7604 7.49999 13.1693 7.49999H15.25H16V8.99999H15.25H13.5078L11.433 14.1868C11.0954 15.031 9.8976 15.023 9.57122 14.1744L5.51324 3.62367Z" fill="currentColor"></path></svg>
                                     </div>
                                     <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Status page</div>
+                                        <div class="navbar-category-section-item-text-title">Status Page</div>
                                         <div class="navbar-category-section-item-text-description">Infrastructure updates</div>
                                     </div>
                                 </a>
@@ -104,7 +104,7 @@
                                             </defs></svg>
                                     </div>
                                     <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Privacy and terms</div>
+                                        <div class="navbar-category-section-item-text-title">Privacy and Terms</div>
                                         <div class="navbar-category-section-item-text-description">Data and access rules</div>
                                     </div>
                                 </a>
@@ -173,26 +173,82 @@
                     <li class="navbar-navigation-item">
                         <a href="/blog" class="navbar-navigation-item-link">Blog</a>
                     </li>
+                    <li class="navbar-navigation-item">
+                        <a href="/starscouts" class="navbar-navigation-item-link">Starscouts</a>
+                    </li>
                 </ul>
             </div>
             <div id="navbar-inner-right">
                 <a href="/contact" class="btn btn-secondary">Contact</a>
                 <a href="/join" class="btn btn-primary">Join Floofi</a>
             </div>
-        </header>
-    </nav>
+        </nav>
+    </header>
 
     <main id="app">
         <div id="loader">
             <img id="loader-img" src="/assets/img/loading.svg" alt="Loading...">
         </div>
+
         <article id="page"></article>
     </main>
+
+    <footer id="footer-container">
+        <div id="footer-inner">
+            <div id="footer-inner-general">
+                <div id="footer-inner-general-logo">
+                    <a id="footer-inner-general-logo-inner" href="/credits">
+                        <img src="/assets/img/footer.png" alt="" id="footer-inner-general-icon">
+                        <span id="footer-inner-general-copyright">© <span id="footer-inner-general-copyright-year"></span></span>
+                        <span id="footer-inner-general-version">-</span>
+                    </a>
+                </div>
+                <a href="https://status.equestria.dev/" target="_blank" class="btn btn-secondary" id="footer-inner-general-status-container">
+                    <span id="footer-inner-general-status-indicator"></span>
+                    <span id="footer-inner-general-status-text">Loading...</span>
+                </a>
+                <div id="footer-inner-general-socials">
+                    <ul id="footer-inner-general-socials-inner">
+                        <li>
+                            <a class="social" href="https://github.com/equestria-dev">
+                                <svg height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><g clip-path="url(#clip0_872_3147)">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58 0 0 3.57879 0 7.99729C0 11.5361 2.29 14.5251 5.47 15.5847C5.87 15.6547 6.02 15.4148 6.02 15.2049C6.02 15.0149 6.01 14.3851 6.01 13.7154C4 14.0852 3.48 13.2255 3.32 12.7757C3.23 12.5458 2.84 11.836 2.5 11.6461C2.22 11.4961 1.82 11.1262 2.49 11.1162C3.12 11.1062 3.57 11.696 3.72 11.936C4.44 13.1455 5.59 12.8057 6.05 12.5957C6.12 12.0759 6.33 11.726 6.56 11.5261C4.78 11.3262 2.92 10.6364 2.92 7.57743C2.92 6.70773 3.23 5.98797 3.74 5.42816C3.66 5.22823 3.38 4.40851 3.82 3.30888C3.82 3.30888 4.49 3.09895 6.02 4.1286C6.66 3.94866 7.34 3.85869 8.02 3.85869C8.7 3.85869 9.38 3.94866 10.02 4.1286C11.55 3.08895 12.22 3.30888 12.22 3.30888C12.66 4.40851 12.38 5.22823 12.3 5.42816C12.81 5.98797 13.12 6.69773 13.12 7.57743C13.12 10.6464 11.25 11.3262 9.47 11.5261C9.76 11.776 10.01 12.2558 10.01 13.0056C10.01 14.0752 10 14.9349 10 15.2049C10 15.4148 10.15 15.6647 10.55 15.5847C12.1381 15.0488 13.5182 14.0284 14.4958 12.6673C15.4735 11.3062 15.9996 9.67293 16 7.99729C16 3.57879 12.42 0 8 0Z" fill="currentColor"></path>
+                                </g>
+                                    <defs>
+                                        <clipPath id="clip0_872_3147">
+                                            <rect width="16" height="16" fill="white"></rect>
+                                        </clipPath>
+                                    </defs></svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="social" href="https://x.com/miapone_">
+                                <svg height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 0.5H5.75L9.48421 5.71053L14 0.5H16L10.3895 6.97368L16.5 15.5H11.25L7.51579 10.2895L3 15.5H1L6.61053 9.02632L0.5 0.5ZM12.0204 14L3.42043 2H4.97957L13.5796 14H12.0204Z" fill="currentColor"></path></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="footer-inner-projects" class="footer-inner-listing">
+                <h2 class="footer-inner-listing-title">Projects</h2>
+                <ul id="footer-inner-projects-items" class="footer-inner-listing-items"></ul>
+            </div>
+            <div>
+                <h2 id="footer-inner-resources" class="footer-inner-listing-title">Resources</h2>
+                <ul id="footer-inner-resources-items" class="footer-inner-listing-items"></ul>
+            </div>
+            <div id="footer-inner-org">
+                <h2 class="footer-inner-listing-title">Organisation</h2>
+                <ul id="footer-inner-org-items" class="footer-inner-listing-items"></ul>
+            </div>
+        </div>
+    </footer>
 
     <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
     <script src="/assets/src/loader.js"></script>
     <script src="/assets/src/scroll.js"></script>
+    <script src="/assets/src/footer.js"></script>
     <script src="/assets/src/debug.js"></script>
 </body>
 </html>
