Working hero + credits page

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,15 +10,66 @@
                 creatures who<br>
                 matter
             </span>
-            <span id="home-hero-background">
-                Technology for<br>
-                creatures who<br>
-                matter
-            </span>
         </div>
         <div id="home-hero-image">
-            <img src="/assets/img/hero-1.webp" alt="" id="home-hero-image-1"><img src="/assets/img/hero-2.webp" alt="" id="home-hero-image-2"><img src="/assets/img/hero-3.webp" alt="" id="home-hero-image-3">
-            <img src="/assets/img/hero.svg" alt="" id="home-hero-image-background">
+            <svg id="home-hero-image-inner" viewBox="0 0 240.32 239.18">
+                <g id="home-hero-background">
+                    <linearGradient id="home-hero-background-rainbow" gradientUnits="userSpaceOnUse" x1="80.9372" y1="149.7796" x2="159.211" y2="71.5058">
+                        <stop  offset="0" style="stop-color:#FF0000"/>
+                        <stop  offset="0.2" style="stop-color:#FFB300"/>
+                        <stop  offset="0.4" style="stop-color:#33FF00"/>
+                        <stop  offset="0.6" style="stop-color:#007BFF"/>
+                        <stop  offset="0.8" style="stop-color:#E600FF"/>
+                        <stop  offset="1" style="stop-color:#FF0000"/>
+                    </linearGradient>
+                    <path id="home-hero-background-path" style="fill:url(#home-hero-background-rainbow);" d="M156.392,133.722c0.118,1.188,0.177,2.389,0.177,3.605c0,20.15-16.337,36.486-36.486,36.486
+		s-36.486-16.337-36.486-36.486c0-1.333,0.073-2.648,0.213-3.945c-10.837-6.325-18.118-18.078-18.118-31.535
+		c0-20.15,16.332-36.482,36.482-36.482c6.638,0,12.863,1.768,18.223,4.865c5.264-2.947,11.331-4.629,17.797-4.629
+		c20.154,0,36.486,16.337,36.486,36.486C174.678,115.608,167.324,127.415,156.392,133.722z"/>
+                </g>
+                <g id="home-hero-foreground">
+                    <g>
+                        <defs>
+                            <circle id="home-hero-foreground-1-circle" cx="102.175" cy="101.849" r="36.485"/>
+                        </defs>
+                        <clipPath id="home-hero-foreground-1-path">
+                            <use xlink:href="#home-hero-foreground-1-circle"  style="overflow:visible;"/>
+                        </clipPath>
+                        <g style="clip-path:url(#home-hero-foreground-1-path);">
+
+                            <image style="overflow:visible;" width="512" height="512" xlink:href="/assets/img/hero-1.webp"  transform="matrix(0.1425 0 0 0.1425 65.6894 65.3635)">
+                            </image>
+                        </g>
+                    </g>
+                    <g>
+                        <defs>
+                            <circle id="home-hero-foreground-2-circle" cx="138.194" cy="102.088" r="36.485"/>
+                        </defs>
+                        <clipPath id="home-hero-foreground-2-path">
+                            <use xlink:href="#home-hero-foreground-2-circle"  style="overflow:visible;"/>
+                        </clipPath>
+                        <g style="clip-path:url(#home-hero-foreground-2-path);">
+
+                            <image style="overflow:visible;" width="512" height="512" xlink:href="/assets/img/hero-2.webp"  transform="matrix(0.1425 0 0 0.1425 101.7089 65.6022)">
+                            </image>
+                        </g>
+                    </g>
+                    <g>
+                        <defs>
+                            <circle id="home-hero-foreground-3-circle" cx="120.084" cy="137.326" r="36.485"/>
+                        </defs>
+                        <clipPath id="home-hero-foreground-3-path">
+                            <use xlink:href="#home-hero-foreground-3-circle"  style="overflow:visible;"/>
+                        </clipPath>
+                        <g style="clip-path:url(#home-hero-foreground-3-path);">
+
+                            <image style="overflow:visible;" width="512" height="512" xlink:href="/assets/img/hero-3.webp"  transform="matrix(0.1425 0 0 0.1425 83.5987 100.8403)">
+                            </image>
+                        </g>
+                    </g>
+                </g>
+            </svg>
+
         </div>
     </div>
 </div>
