Mobile improvements + WIP home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -74,4 +74,13 @@
     </div>
 </div>
 
-<p>Content</p>
+<div id="home-cards">
+    <div class="home-card" id="home-card-0">Hello</div>
+    <div class="home-card" id="home-card-1">Hello</div>
+    <div class="home-card" id="home-card-2">Hello</div>
+    <div class="home-card" id="home-card-3">Hello</div>
+</div>
+
+<div id="home-cta">
+    Hello
+</div>
