--- a/pages/home.html
+++ b/pages/home.html
@@ -6,11 +6,18 @@
     <div id="home-hero">
         <div id="home-hero-inner">
             <div id="home-hero-text">
-            <span id="home-hero-title">
-                Technology for<br>
-                creatures who<br>
-                matter
-            </span>
+            <div id="home-hero-title">
+                <div id="home-hero-title-headline">
+                    Technology for creatures who matter.
+                </div>
+                <div id="home-hero-title-tagline">
+                    Floofi provides you with tools and applications to develop your activities while staying true to yourself.
+                </div>
+                <a href="/projects" class="btn btn-primary btn-cta" id="home-hero-cta">
+                    <svg class="btn-cta-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m10.065 12.493-6.18 1.318a.934.934 0 0 1-1.108-.702l-.537-2.15a1.07 1.07 0 0 1 .691-1.265l13.504-4.44"/><path d="m13.56 11.747 4.332-.924"/><path d="m16 21-3.105-6.21"/><path d="M16.485 5.94a2 2 0 0 1 1.455-2.425l1.09-.272a1 1 0 0 1 1.212.727l1.515 6.06a1 1 0 0 1-.727 1.213l-1.09.272a2 2 0 0 1-2.425-1.455z"/><path d="m6.158 8.633 1.114 4.456"/><path d="m8 21 3.105-6.21"/><circle cx="12" cy="13" r="2"/></svg>
+                    <span class="btn-cta-text">Start Exploring</span>
+                </a>
+            </div>
             </div>
             <div id="home-hero-image">
                 <svg id="home-hero-image-inner" viewBox="0 0 240.32 239.18">
@@ -75,17 +82,47 @@
         </div>
     </div>
 
-    <h2 class="title">Check out what we do</h2>
+    <h2 class="title">How Floofi can help you</h2>
     <div id="home-cards">
-        <div class="home-card" id="home-card-0">Hello</div>
-        <div class="home-card" id="home-card-1">Hello</div>
-        <div class="home-card" id="home-card-2">Hello</div>
-        <div class="home-card" id="home-card-3">Hello</div>
+        <div class="home-card" id="home-card-0">
+            <div class="home-card-header" id="home-card-0-header">
+                <svg class="home-card-icon" id="home-card-0-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
+                <span class="home-card-title" id="home-card-0-title">Systems Programming</span>
+            </div>
+            <div class="home-card-content" id="home-card-0-content">
+                Computer systems need to function well and fast. That's why we build our systems using safer languages and extensive testing.
+            </div>
+        </div>
+        <div class="home-card" id="home-card-1">
+            <div class="home-card-header" id="home-card-1-header">
+                <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="16" y="16" width="6" height="6" rx="1"/><rect x="2" y="16" width="6" height="6" rx="1"/><rect x="9" y="2" width="6" height="6" rx="1"/><path d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"/><path d="M12 12V8"/></svg>
+                <span class="home-card-title" id="home-card-1-title">Hosting and Networking</span>
+            </div>
+            <div class="home-card-content" id="home-card-1-content">
+                With our experience managing a medium-sized infrastructure of multiple services, we can help bring your ideas to the masses.
+            </div>
+        </div>
+        <div class="home-card" id="home-card-2">
+            <div class="home-card-header" id="home-card-2-header">
+                <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 18h8"/><path d="M3 22h18"/><path d="M14 22a7 7 0 1 0 0-14h-1"/><path d="M9 14h2"/><path d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"/><path d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"/></svg>
+                <span class="home-card-title" id="home-card-2-title">Scientific Research</span>
+            </div>
+            <div class="home-card-content" id="home-card-2-content">
+                We invest a significant part of our resources into developing innovative solutions to improve creature lives and wellbeings.
+            </div>
+        </div>
+        <div class="home-card" id="home-card-3">
+            <div class="home-card-header" id="home-card-3-header">
+                <svg class="home-card-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="4" r="2"/><circle cx="18" cy="8" r="2"/><circle cx="20" cy="16" r="2"/><path d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"/></svg>
+                <span class="home-card-title" id="home-card-3-title">Furry Fandom</span>
+            </div>
+            <div class="home-card-content" id="home-card-3-content">
+                Our projects and research are primarily oriented towards furries and helping them develop as a community.
+            </div>
+        </div>
     </div>
 
-    <hr class="home-section-separator">
-    <h2 class="title">Want to give us a try?</h2>
     <div id="home-cta">
-        Hello
+        <h2 class="title">Want to give us a try?</h2>
     </div>
 </section>
