Complete home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -123,6 +123,33 @@
     </div>
 
     <div id="home-cta">
-        <h2 class="title">Want to give us a try?</h2>
+        <div id="home-cta-left">
+            <div id="home-cta-title">
+                <span id="home-cta-title-focus">Want to give us a try?</span>
+                <span id="home-cta-title-message">Start with our projects right away.<br>Get in touch with your ideas and we can work together.</span>
+            </div>
+            <div id="home-cta-buttons">
+                <a href="/projects" class="btn btn-primary btn-cta-small" id="home-cta-button-start">
+                    <span class="btn-cta-text">Start Exploring</span>
+                </a>
+                <a href="/contact" class="btn btn-secondary btn-cta-small" id="home-cta-button-contact">
+                    <span class="btn-cta-text">Contact our Team</span>
+                </a>
+            </div>
+        </div>
+        <div id="home-cta-right">
+            <div id="home-cta-orgs">
+                <span id="home-cta-orgs-focus">Discover Floofi for Nonprofits</span>
+                <span id="home-cta-orgs-message">and widen your online visibility using Floofi's platform, for free.</span>
+            </div>
+            <div id="home-cta-orgs-btns">
+                <a href="/contact" class="btn btn-secondary btn-cta-small" id="home-cta-orgs-start">
+                    <span class="btn-cta-text">Request Access</span>
+                </a>
+                <span class="badge-beta" id="home-cta-orgs-beta">
+                    In Beta
+                </span>
+            </div>
+        </div>
     </div>
 </section>
