--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                         <div id="navbar-category-base-1" class="navbar-category-base">
                             <div class="navbar-category-section">
                                 <div class="navbar-category-section-header">Services and Inclusiveness</div>
-                                <a href="/furry" class="navbar-category-section-item">
+                                <a href="/fluff" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="4" r="2"/><circle cx="18" cy="8" r="2"/><circle cx="20" cy="16" r="2"/><path d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"/></svg>
                                     </div>
                                     <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Furry Fandom</div>
+                                        <div class="navbar-category-section-item-text-title">Furries and Ponies</div>
                                         <div class="navbar-category-section-item-text-description">Statistics and actions</div>
                                     </div>
                                 </a>
